--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://admin:admin@cluster0.uwfcu.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://admin:admin@cluster0.uwfcu.mongodb.net/test?retryWrites=true&w=majority
