--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
         "moment": "^2.29.3",
+        "mongodb": "^5.0.0",
         "mongoose": "^6.3.5",
         "nodemon": "^2.0.16",
         "passport": "^0.6.0",
